# pretty_dbg

./: .automation_tasks_rs_file_hashes.json  Cargo.toml  README.bak  README.md  RELEASES.md  cache48.txt  temp48.txt
.github/workflows/: rust_fmt_auto_build_test.yml
automation_tasks_rs/: .file_hashes.json  Cargo.toml
automation_tasks_rs/src/: main.rs
docs/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js  tidy_warnings.txt
docs/pretty_dbg/: all.html  index.html  macro.format_dbg!.html  macro.format_dbg.html  macro.pretty_dbg!.html  macro.pretty_dbg.html  sidebar-items.js
docs/search.desc/pretty_dbg/: pretty_dbg-desc-0-.js
docs/src/pretty_dbg/: lib.rs.html
examples/: macro_dbg_1.rs  macro_dbg_2.rs  macro_dbg_3.rs  macro_dbg_4.rs  macro_format_dbg_1.rs  macro_pretty_dbg_1.rs  macro_pretty_dbg_2.rs
examples_todo/: example_1.rs
src/: lib.rs
tests/: integration_test.rs
tmp/: temp47.txt
