[package]
name = "pretty_dbg"
version = "1.0.56"
description = "pretty_dbg! is a copy of dbg!, just modified :#? to :# for pretty print. format_dbg! works like eprintln! with added file, line and column"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/pretty_dbg"
categories = ["programming", "development-tools::debugging","development-tools"]
# Keyword must be only one word: lowercase letters, hyphens(-) or numbers, less then 35 characters, at most 5 keywords per crate
keywords = ["dbg","macro"]
# publish to crates.io. Only this files.
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/*"
]

[dependencies]
# no dependencies, it is just a macro
# but it uses std - the standard library of Rust 

[dev-dependencies]
# only for test to capture the std output
gag = "1.0.0"
serde_json="1.0.113"
anyhow="1.0.79"
